<?xml version="1.0" encoding="utf-8"?>

<!-- when changing this file, consider adapting values-v29/preferences_appearance.xml as well (values-v29/preferences_appearance.xml
    differs only wrt theme default value) -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref_theme"
        android:title="@string/pref_theme"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_values"
        android:defaultValue="light" />

    <ListPreference
        android:key="pref_language"
        android:title="@string/pref_language"
        android:entries="@array/pref_language_entries"
        android:entryValues="@array/pref_language_values"
        android:persistent="false"
        android:defaultValue="" />

    <Preference
        android:key="pref_chat_background"
        android:title="@string/pref_background" />

    <PreferenceCategory android:title="@string/pref_colors_category">
        <ListPreference
            android:key="pref_chatlist_style"
            android:title="@string/pref_chatlist_style"
            android:entries="@array/chatlist_style_entries"
            android:entryValues="@array/chatlist_style_values"
            android:persistent="false" />
        <ListPreference
            android:key="pref_accent"
            android:title="@string/pref_accent"
            android:entries="@array/accent_entries"
            android:entryValues="@array/accent_values"
            android:persistent="false" />
        <Preference
            android:key="pref_color_message_text_in"
            android:title="@string/pref_color_message_text_in"
            android:persistent="false" />
        <Preference
            android:key="pref_color_message_text_out"
            android:title="@string/pref_color_message_text_out"
            android:persistent="false" />
        <Preference
            android:key="pref_color_bubble_fill_in"
            android:title="@string/pref_color_bubble_fill_in"
            android:persistent="false" />
        <Preference
            android:key="pref_color_bubble_fill_out"
            android:title="@string/pref_color_bubble_fill_out"
            android:persistent="false" />
        <Preference
            android:key="pref_color_bubble_border_in"
            android:title="@string/pref_color_bubble_border_in"
            android:persistent="false" />
        <Preference
            android:key="pref_color_bubble_border_out"
            android:title="@string/pref_color_bubble_border_out"
            android:persistent="false" />
        <Preference
            android:key="pref_color_conversation_bg"
            android:title="@string/pref_color_conversation_bg"
            android:persistent="false" />
        <Preference
            android:key="pref_color_list_title"
            android:title="@string/pref_color_list_title"
            android:persistent="false" />
        <Preference
            android:key="pref_color_list_preview"
            android:title="@string/pref_color_list_preview"
            android:persistent="false" />
        <Preference
            android:key="pref_color_fab"
            android:title="@string/pref_color_fab"
            android:persistent="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_fonts_category">
        <Preference
            android:key="pref_font_chat_text"
            android:title="@string/pref_font_chat_text"
            android:persistent="false" />
        <Preference
            android:key="pref_font_conv_title"
            android:title="@string/pref_font_conv_title"
            android:persistent="false" />
        <Preference
            android:key="pref_font_list_title"
            android:title="@string/pref_font_list_title"
            android:persistent="false" />
        <Preference
            android:key="pref_font_list_preview"
            android:title="@string/pref_font_list_preview"
            android:persistent="false" />
        <Preference
            android:key="pref_font_settings"
            android:title="@string/pref_font_settings"
            android:persistent="false" />
        <Preference
            android:key="pref_font_add"
            android:title="@string/pref_font_add"
            android:summary="@string/pref_font_add_summary"
            android:persistent="false" />
    </PreferenceCategory>

</PreferenceScreen>
